--- a/Backstage/municipalChart.html
+++ b/Backstage/municipalChart.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../layui/css/layui.css">
-    <link rel="stylesheet" href="../css/charts.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./layui/css/layui.css">
+    <link rel="stylesheet" href="./css/charts.css">
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -125,10 +125,10 @@
         </div>
     </div>
 </body>
-<script src="../layui/layui.all.js"></script>
-<script src="../js/promiseJson.js"></script>
-<script src="../js/echarts.js"></script>
-<script src="../js/mycharts.js"></script>
+<script src="./layui/layui.all.js"></script>
+<script src="./js/promiseJson.js"></script>
+<script src="./js/echarts.js"></script>
+<script src="./js/mycharts.js"></script>
 <script>
     new barChart();
 </script>
